# weatherKit

./: README.md  build.sh
.VSCodeCounter/2025-12-19_19-05-34/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: build.yml
baseStation/: CMakeLists.txt  README.md
baseStation/main/include/: pinout.h
baseStation/main/include/tasks/: task_common.h  ui_task.h  weather_ack_task.h
baseStation/main/include/ui/: ui.h
baseStation/main/src/: main.c  main.c.bak
dev/: CMakeLists.txt
dev/main/: CMakeLists.txt  main.c  pinout.h
dev/main/drivers/: buttons.c  buttons.h  display.c  display.h  lora.c  lora.h  lora_protocol.h
dev/main/include/drivers/: display.h  lora.h  lora_protocol.h
dev/main/include/tasks/: config_tx_task.h  lora_rx_task.h
dev/main/include/ui/: ui_common.h  ui_info.h
dev/main/include/weather/: storm_tracker.h  weather_calc.h
dev/main/src/: main.c.new
dev/main/src/drivers/: display.c
dev/main/src/tasks/: config_tx_task.c  lora_rx_task.c  task_common.c
dev/main/src/ui/: ui_pages.c
dev/main/ui/: ui.c  ui.h  ui_common.h  ui_info.c  ui_pages.c  ui_pages.h
dev/main/weather/: storm_tracker.c  weather_calc.c
docs/: HARDWARE_ARCHITECTURE.md  SOFTWARE_ARCHITECTURE.md
sensorPackage/: CMakeLists.txt  README.md  build_log.txt  esp_idf_project_configuration.json  idf_component.yml  sensorcode.c.bak  sensorcode.h.bak
sensorPackage/main/: CMakeLists.txt  idf_component.yml  main.c  pinout.h  sensor_routine.c  sensor_routine.h
sensorPackage/main/drivers/: Lightning.h  ah20.c  ah20.h  aht20_wrapper.c  aht20_wrapper.h  i2c_diag.c  i2c_init.c  i2c_init.h  led.c  led.h  lightning_driver.c  lora.c  lora.h  lora_protocol.h  pressure_driver.c  pressure_driver.h  temp_humidity_driver.c  temp_humidity_driver.h
sensorPackage/main/include/: pinout.h  sensor_routine.h
sensorPackage/main/include/drivers/: aht20.h  as3935.h  buzzer.h  led.h  lora.h  lora_protocol.h
sensorPackage/main/include/tasks/: led_status_task.h  lora_rx_task.h  task_common.h  weather_tx_task.h
sensorPackage/main/src/: main.c  sensor_routine.c.bak
sensorPackage/main/src/drivers/: aht20.c  as3935.c  buzzer.c  i2c_init.c  led.c  lora.c  pressure_driver.c
sensorPackage/main/src/tasks/: led_status_task.c  lora_rx_task.c  sensor_routine.c  task_common.c  weather_tx_task.c
(+7 files in other folders)
